# arboretum

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/backtester/: __init__.py
src/backtester/analysis/: __init__.py  metrics.py  results_store.py  scanner.py  tearsheet.py  visualization.py
src/backtester/core/: __init__.py  engine.py  events.py  execution.py  portfolio.py
src/backtester/data/: __init__.py  cache.py  calendar.py  handler.py  schemas.py  yfinance_handler.py
src/backtester/strategies/: __init__.py  base.py
src/backtester/strategies/examples/: __init__.py  bollinger_band.py  ema_crossover.py  momentum.py  moving_average_crossover.py  rsi_mean_reversion.py
src/backtester/strategies/indicators/: __init__.py  momentum.py  moving_averages.py  volatility.py
src/backtester/utils/: __init__.py
src/idea_capture/: __init__.py
tests/: __init__.py  conftest.py  test_calendar.py  test_data_handler.py  test_engine.py  test_events.py  test_execution.py  test_integration.py  test_metrics.py  test_portfolio.py  test_strategies.py  test_tearsheet.py  test_visualization.py
