[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arboretum"
version = "0.1.0"
description = "High-performance stock backtesting engine and idea capture system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    # Data processing
    "polars>=1.0",
    "numpy>=1.26",
    "numba>=0.60",

    # Data acquisition
    "yfinance>=0.2",
    "aiohttp>=3.9",

    # Storage
    "duckdb>=1.0",
    "pyarrow>=15.0",  # Required for DuckDB/Polars integration

    # Configuration & validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Serialization (fast)
    "msgspec>=0.18",

    # Logging
    "structlog>=24.0",

    # Visualization
    "plotly>=5.18",

    # Idea Capture dependencies
    "typer>=0.12",
    "trafilatura>=1.12",
    "feedparser>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyright>=1.1",
]
whisper = [
    # Optional: local transcription (large download)
    "faster-whisper>=1.0",
]

[project.scripts]
idea = "idea_capture.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/backtester", "src/idea_capture"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (Python 3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["backtester", "idea_capture"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require internet/external services)",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
